--- a/Domaene/config.json
+++ b/Domaene/config.json
@@ -5,45 +5,46 @@
   "logo": {
     "file": "",
     "link": "",
-    "text": "Clara"
+    "text": "Luleich"
   },
   "text": {
-    "more": "Pädagogische Psychologie gekürzte Fassung",
-    "intro": "Pädagogische Psychologie",
-    "title": "Pädagogische Psychologie"
+    "more": "PaePsy Beispiel 1",
+    "intro": "PaePsy",
+    "title": "PaePsy"
   },
   "legend": {
     "edgeLabel": "Verbindungen",
-    "colorLabel": "Inhaltsbereich",
+    "colorLabel": "Inhaltsbereiche",
     "nodeLabel": "Konzepte"
   },
   "features": {
     "search": true,
-    "groupSelectorAttribute": "area",
+    "groupSelectorAttribute": false,
     "hoverBehavior": "default"
   },
   "informationPanel": {
     "groupByEdgeDirection": false,
-    "imageAttribute": false
+    "imageAttribute": "false"
   },
   "sigma": {
     "drawingProperties": {
-      "defaultEdgeType": "curve",
+      "defaultEdgeType": "line",
       "defaultHoverLabelBGColor": "#002147",
       "defaultLabelBGColor": "#ddd",
-      "activeFontStyle": "bold",
+      "activeFontStyle": "regular",
       "defaultLabelColor": "#000",
-      "labelThreshold": 10,
+      "labelThreshold": 1,
       "defaultLabelHoverColor": "#fff",
-      "fontStyle": "bold",
-      "hoverFontStyle": "bold",
-      "defaultLabelSize": 14
+      "fontStyle": "regular",
+      "hoverFontStyle": "regular",
+	  "labelSize": "proportional",
+	  "labelSizeRatio": 1
     },
     "graphProperties": {
-      "maxEdgeSize": 0.5,
-      "minEdgeSize": 0.2,
-      "minNodeSize": 1,
-      "maxNodeSize": 7
+      "maxEdgeSize": 5,
+      "minEdgeSize": 0.5,
+      "minNodeSize": 0.5,
+      "maxNodeSize": 10
     },
     "mouseProperties": {
       "maxRatio": 20,
