--- a/Domaene/config.json
+++ b/Domaene/config.json
@@ -19,7 +19,7 @@
   },
   "features": {
     "search": true,
-    "groupSelectorAttribute": false,
+    "groupSelectorAttribute": "area",
     "hoverBehavior": "default"
   },
   "informationPanel": {
